<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/daySelectRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:layout_alignParentTop="true">

        <ImageView
                android:id="@+id/prevDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/desc_left_arrow"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/dayDisplay" />

        <TextView
                android:id="@+id/dayDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_today"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/prevDayButton"
                app:layout_constraintRight_toLeftOf="@id/nextDayButton" />

        <ImageView
                android:id="@+id/nextDayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/desc_right_arrow"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/dayDisplay"
                app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/displayRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_below="@id/daySelectRow"
            android:layout_above="@id/buttonRow">

        <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="match_parent">

            <RelativeLayout
                    android:id="@+id/scheduleDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp">

                <ImageView
                        android:id="@+id/displayBackground"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        style="@style/BackgroundImageView"
                        android:contentDescription="@string/desc_bg_notches" />



            </RelativeLayout>

        </ScrollView>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

            <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/text_plus" />

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleX="0.75"
                    android:scaleY="0.75"
                    android:contentDescription="@string/desc_zoom"
                    app:srcCompat="@drawable/zoom" />

            <Button
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/text_minus" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">

        <ToggleButton
                android:id="@+id/editModeToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/text_edit_mode"
                android:textOn="@string/text_edit_mode" />

    </LinearLayout>

</RelativeLayout>